# TranslateSmart

.cursor/rules/: backend.mdc  frontend.mdc  project.mdc  test.mdc
backend/: pyproject.toml
backend/app/: main.py
docs/: architecture.md  project-breif.md
